Transform project into HandFont: Handwriting font creation app
- Rebrand entire project from app template to HandFont
- Update core features, landing page, and documentation
- Remove todo-related components and actions
- Add new database schema for fonts and drawing sessions
- Implement comic-book style design and interactions
- Configure enhanced database connection handling
- Add QR code and device synchronization features

--- a/.github/funding.yaml
+++ b/.github/funding.yaml
@@ -1,3 +1,7 @@
 # If you find my open-source work helpful, please consider sponsoring me!
 
-github: mckaywrigley
+# These are supported funding model platforms
+
+# github: mckaywrigley
+# Replace with your own GitHub username if needed
+# or remove/comment out if not using GitHub sponsors
