--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "mckays-app-template",
+  "name": "handfont",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
+    "dev:remote": "next dev -p 3001 -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,7 +16,11 @@
     "analyze": "ANALYZE=true npm run build",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tunnel": "node scripts/setup-local-tunnel.js",
+    "ngrok": "node scripts/ngrok-tunnel.js",
+    "app-url": "node scripts/update-app-url.js",
+    "firewall": "node scripts/open-firewall-port.js"
   },
   "dependencies": {
     "@clerk/backend": "^1.20.1",
@@ -49,6 +54,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/three": "^0.173.0",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -62,7 +69,9 @@
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "posthog-js": "^1.201.0",
+    "qrcode.react": "^4.2.0",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react-confetti": "^6.2.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-hook-form": "^7.54.1",
@@ -72,6 +81,8 @@
     "stripe": "^16.9.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.9",
     "zod": "^3.24.1"
   },
@@ -87,6 +98,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "husky": "^9.1.6",
+    "ngrok": "^5.0.0-beta.2",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
